terraform/modules/ec2-instance/security_groups.tf
# Security Group Configuration
resource "aws_security_group" "s5wesley_sg" {
  vpc_id = aws_vpc.s5wesley_vpc.id

  # Allow SSH access from any IP
  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTP access from any IP
  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTPS access from any IP
  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Egress rule to allow all outbound traffic
  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Tags for the security group
  tags = merge(
    var.common_tags,
    { Name = format("%s-%s-%s-sg", var.common_tags["id"], var.common_tags["environment"], var.common_tags["project"]) }
  )
}
